# esprima2

./: README.md  setup.cfg
.github/workflows/: pypi.yml
esprima/: parser.py  scanner.py  visitor.py
test/: __init__.py
test/fixtures/ES6/identifier/: invalid_expression_await.module.tree.json  math_alef.tree.json  math_dal_part.tree.json  math_kaf_lam.tree.json  math_zain_start.tree.json  module_await.tree.json
test/fixtures/ES6/template-literals/: unclosed-interpolation.failure.json  unclosed-nested.failure.json
test/fixtures/es2017/async/functions/: invalid-generator-declaration.tree.json  invalid-generator-expression.tree.json
test/fixtures/es2017/async/methods/: invalid-async-class-generator.tree.json  invalid-async-line-terminator-method.tree.json  invalid-async-line-terminator-static-method.tree.json  invalid-static-async-class-generator.tree.json
test/fixtures/es2018/dynamic-import/: invalid-non-callee.failure.json
test/fixtures/es2020/import-meta/: import-meta-property.module.tree.json  simple-import-meta.module.tree.json
test/fixtures/es2022/import-assertions/: named-import-assertion.module.tree.json  simple-import-assertion.module.tree.json
test/fixtures/es2023/import-attributes/: simple-import-attribute.module.tree.json
test/fixtures/invalid-syntax/: migrated_0170.tree.json  migrated_0275.tree.json
