[metadata]
name = esprima
version = 5.0.0
author = Somdev Sangwan (s0md3v)
author_email = s0md3v@gmail.com
license = BSD-2-Clause
license_files = LICENSE.BSD
description = high-performance javascript parser, tokenizer and lexical analyser
keywords =
    esprima
    ecmascript
    javascript
    parser
    ast
url = https://github.com/s0md3v/esprima2
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: General
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
packages = esprima
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3

[options.entry_points]
console_scripts = esprima = esprima.__main__:main
